# esp32s3_development

./: .gitignore  CMakeLists.txt  README.md  partitions-16MiB.csv  sdkconfig.defaults
components/APP/: CMakeLists.txt
components/AUDIO/: CMakeLists.txt
components/AUDIO/audio_pipeline/: audio_pipeline.c
components/AUDIO/command_handler/: command_handler.c  command_handler.h
components/AUDIO/speech_recognition/: speech_recognition.c  speech_recognition.h
components/BSP/: CMakelists.txt
components/BSP/inmp441_mic/: inmp441_mic.c  inmp441_mic.h
components/BSP/max98357a_amp/: max98357a_amp.c  max98357a_amp.h
components/BSP/mpu6050/: mpu6050.c  mpu6050.h  mpu6050_config.h
components/BSP/st7789_lcd/: st7789_lcd.c  st7789_lcd.h
components/BSP/ws2812_led/: ws2812_led.c  ws2812_led.h
components/LVGL_DRV/: CMakeLists.txt
components/LVGL_DRV/lvgl_port/: lvgl_port.c  lvgl_port.h
components/Middlewares/audio_pipeline/: CMakeLists.txt  audio_pipeline.c
components/Middlewares/lvgl_port/: CMakeLists.txt
components/Middlewares/lvgl_ui/: CMakeLists.txt  lvgl_demo_ui.c
components/Middlewares/speech_recognition/: CMakeLists.txt  speech_recognition.c
components/NET/: CMakeLists.txt
components/NET/mqtt_app/: mqtt_app.c  mqtt_app.h  mqtt_app_config.h
components/NET/nvs_storage/: nvs_storage.c
components/examples/: CMakeLists.txt  example_audio_loopback.c  example_led_effects.c  example_lvgl_display.c  example_mqtt_image.c  example_mqtt_mpu6050.c  example_speech_recognition.c  examples_demo.c
main/: idf_component.yml  main.c
(+8 files in other folders)
